--- a/MyEssentialOilRemedies/iphone.storyboard
+++ b/MyEssentialOilRemedies/iphone.storyboard
@@ -733,6 +733,22 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="618"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7k1-bs-kv1">
+                                <rect key="frame" x="2" y="112" width="342" height="506"/>
+                                <subviews>
+                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="N29-mZ-UTM">
+                                        <rect key="frame" x="14" y="18" width="314" height="470"/>
+                                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    </tableView>
+                                </subviews>
+                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstItem="N29-mZ-UTM" firstAttribute="top" secondItem="7k1-bs-kv1" secondAttribute="topMargin" constant="10" id="41H-Ze-cZH"/>
+                                    <constraint firstItem="N29-mZ-UTM" firstAttribute="leading" secondItem="7k1-bs-kv1" secondAttribute="leadingMargin" constant="6" id="ERi-7q-vdO"/>
+                                    <constraint firstAttribute="bottomMargin" secondItem="N29-mZ-UTM" secondAttribute="bottom" constant="10" id="Umj-UC-ov0"/>
+                                    <constraint firstAttribute="trailingMargin" secondItem="N29-mZ-UTM" secondAttribute="trailing" constant="6" id="sAo-ZJ-9TG"/>
+                                </constraints>
+                            </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3uu-yS-6qj">
                                 <rect key="frame" x="2" y="112" width="342" height="506"/>
                                 <subviews>
@@ -837,16 +853,20 @@
                         <color key="backgroundColor" red="0.66799789669999998" green="0.47512125970000002" blue="0.25860109930000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <color key="tintColor" red="0.66799789669999998" green="0.47512125970000002" blue="0.25860109930000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="7k1-bs-kv1" firstAttribute="leading" secondItem="E5Y-CE-lH8" secondAttribute="leadingMargin" constant="-14" id="2lv-r7-taY"/>
                             <constraint firstItem="Y1C-bd-4Jz" firstAttribute="top" secondItem="wtG-fd-zq4" secondAttribute="bottom" constant="4" id="5e8-WZ-ryj"/>
                             <constraint firstItem="3uu-yS-6qj" firstAttribute="top" secondItem="wtG-fd-zq4" secondAttribute="bottom" constant="4" id="8we-lM-Qob"/>
                             <constraint firstItem="XSN-XR-X97" firstAttribute="top" secondItem="3uu-yS-6qj" secondAttribute="bottom" id="FAf-hL-R0w"/>
                             <constraint firstItem="wtG-fd-zq4" firstAttribute="leading" secondItem="E5Y-CE-lH8" secondAttribute="leadingMargin" id="HOZ-pM-8ke"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="7k1-bs-kv1" secondAttribute="trailing" constant="15" id="JIo-qC-M2L"/>
                             <constraint firstItem="Y1C-bd-4Jz" firstAttribute="leading" secondItem="E5Y-CE-lH8" secondAttribute="leadingMargin" constant="-14" id="JWj-5B-WZ8"/>
                             <constraint firstItem="wtG-fd-zq4" firstAttribute="trailing" secondItem="E5Y-CE-lH8" secondAttribute="trailingMargin" id="M6v-h6-EKJ"/>
+                            <constraint firstItem="7k1-bs-kv1" firstAttribute="top" secondItem="wtG-fd-zq4" secondAttribute="bottom" constant="4" id="diz-Xw-dIa"/>
                             <constraint firstItem="wtG-fd-zq4" firstAttribute="top" secondItem="Tb3-i7-TRK" secondAttribute="bottom" id="ezW-Lx-s36"/>
                             <constraint firstItem="Y1C-bd-4Jz" firstAttribute="trailing" secondItem="E5Y-CE-lH8" secondAttribute="trailingMargin" constant="15" id="hYJ-zP-bJe"/>
                             <constraint firstAttribute="trailingMargin" secondItem="3uu-yS-6qj" secondAttribute="trailing" constant="15" id="qbJ-NU-49n"/>
                             <constraint firstItem="XSN-XR-X97" firstAttribute="top" secondItem="Y1C-bd-4Jz" secondAttribute="bottom" id="uXd-gc-Pvf"/>
+                            <constraint firstItem="XSN-XR-X97" firstAttribute="top" secondItem="7k1-bs-kv1" secondAttribute="bottom" id="w6c-VH-2Yz"/>
                             <constraint firstItem="3uu-yS-6qj" firstAttribute="leading" secondItem="E5Y-CE-lH8" secondAttribute="leadingMargin" constant="-14" id="wOC-ai-trh"/>
                         </constraints>
                     </view>
@@ -879,24 +899,6 @@
                     <view key="view" contentMode="scaleToFill" id="YQm-qb-sBD">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="7k1-bs-kv1">
-                                <rect key="frame" x="2" y="112" width="342" height="506"/>
-                                <subviews>
-                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="N29-mZ-UTM">
-                                        <rect key="frame" x="12" y="25" width="316" height="467"/>
-                                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                    </tableView>
-                                </subviews>
-                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <constraints>
-                                    <constraint firstItem="N29-mZ-UTM" firstAttribute="top" secondItem="7k1-bs-kv1" secondAttribute="topMargin" constant="10" id="41H-Ze-cZH"/>
-                                    <constraint firstItem="N29-mZ-UTM" firstAttribute="leading" secondItem="7k1-bs-kv1" secondAttribute="leadingMargin" constant="6" id="ERi-7q-vdO"/>
-                                    <constraint firstAttribute="bottomMargin" secondItem="N29-mZ-UTM" secondAttribute="bottom" constant="10" id="Umj-UC-ov0"/>
-                                    <constraint firstAttribute="trailingMargin" secondItem="N29-mZ-UTM" secondAttribute="trailing" constant="6" id="sAo-ZJ-9TG"/>
-                                </constraints>
-                            </view>
-                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </view>
                     <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
