#62  Added empty view controllers to modify the Add Remedy view

--- a/MyEssentialOilRemedies/iphone.storyboard
+++ b/MyEssentialOilRemedies/iphone.storyboard
@@ -701,7 +701,43 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="GWI-NC-Upr" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2112" y="1033.5832083958021"/>
+            <point key="canvasLocation" x="1605" y="1016"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="JvO-wk-9Et">
+            <objects>
+                <viewController id="SXO-jE-KhG" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Uwv-pZ-Pax"/>
+                        <viewControllerLayoutGuide type="bottom" id="epD-oT-m75"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="ii7-c0-maq">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="zfm-rc-DEv" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2369" y="784"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="vHI-wy-bIc">
+            <objects>
+                <viewController id="bSp-N1-5Hl" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="svk-I7-S8u"/>
+                        <viewControllerLayoutGuide type="bottom" id="mj8-6d-ftW"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="9gV-xG-BHx">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="HGb-zN-8Dh" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3094" y="781"/>
         </scene>
         <!--View Remedy Details-->
         <scene sceneID="9zl-Uy-Y68">
@@ -868,7 +904,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="CLh-7y-4Pf" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3698.4000000000001" y="891.90404797601207"/>
+            <point key="canvasLocation" x="4718" y="799"/>
         </scene>
         <!--Search Database-->
         <scene sceneID="062-2s-9Gu">
@@ -2192,7 +2228,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ZLu-Kd-aZS" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2898" y="1034"/>
+            <point key="canvasLocation" x="4035" y="1038"/>
         </scene>
         <!--Search Nav-->
         <scene sceneID="xqo-zA-Zqg">
